lib_LTLIBRARIES = libbubi_base.la

libbubi_base_la_CXXFLAGS =	-std=c++11	\
							$(NULL)

libbubi_base_la_SOURCES =	serializer.cpp	\
							$(NULL)
	
libbubi_base_la_LDFLAGS =				\
							$(NULL)

libbubi_base_la_LIBADD =	-lcrypto	\
							$(NULL)	

noinst_HEADERS =	utils.h			\
					serializer.h	\
					base_uint.h		\
					$(NULL)

