lib_LTLIBRARIES = libbubi_database.la

libbubi_database_la_CXXFLAGS =	-std=c++11	\
								-I$(top_builddir)/src/base	\
								-I$(top_builddir)/src/ledger	\
							$(NULL)

libbubi_database_la_SOURCES =	database.cpp	\
							$(NULL)
	
libbubi_database_la_LDFLAGS =				\
							$(NULL)

libbubi_database_la_LIBADD =			\
							$(NULL)	

noinst_HEADERS =	database.h			\
					$(NULL)

